--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,6 @@
-streamlit
-pandas
-matplotlib
-plotly
-datetime
-numpy
-os
-
+streamlit==1.37.1
+pandas==2.2.2
+matplotlib==3.9.0
+numpy==1.26.4
+openpyxl==3.1.2
+seaborn==0.13.2
